hphp/hack/test/typecheck/constraints/class_meth_generics_bad.php.like_types.exp
File "class_meth_generics_bad.php", line 21, characters 12-13:
Invalid argument (Typing[4110])
File "class_meth_generics_bad.php", line 5, characters 37-37:
Expected ~[unresolved] because it is an unenforceable type
File "class_meth_generics_bad.php", line 19, characters 24-27:
But got bool
File "class_meth_generics_bad.php", line 27, characters 12-13:
Invalid argument (Typing[4110])
File "class_meth_generics_bad.php", line 8, characters 38-38:
Expected ~[unresolved] because it is an unenforceable type
File "class_meth_generics_bad.php", line 25, characters 24-28:
But got float
File "class_meth_generics_bad.php", line 32, characters 12-13:
Invalid argument (Typing[4110])
File "class_meth_generics_bad.php", line 12, characters 5-5:
Expected ~[unresolved] because it is an unenforceable type
File "class_meth_generics_bad.php", line 30, characters 24-28:
But got float
File "class_meth_generics_bad.php", line 32, characters 16-17:
Invalid argument (Typing[4110])
File "class_meth_generics_bad.php", line 13, characters 5-6:
Expected ~[unresolved] because it is an unenforceable type
File "class_meth_generics_bad.php", line 30, characters 34-41:
But got vec<int>
File "class_meth_generics_bad.php", line 9, characters 12-24:
Invalid return type (Typing[4110])
File "class_meth_generics_bad.php", line 8, characters 52-58:
Expected ~(T, Tu) because it is an unenforceable type
File "class_meth_generics_bad.php", line 9, characters 12-24:
But got (~T, ~Tu)
File "class_meth_generics_bad.php", line 15, characters 12-24:
Invalid return type (Typing[4110])
File "class_meth_generics_bad.php", line 14, characters 6-12:
Expected ~(T, Tu) because it is an unenforceable type
File "class_meth_generics_bad.php", line 15, characters 12-24:
But got (~T, ~Tu)
